[gd_scene load_steps=22 format=2]

[ext_resource path="res://IPCHICKEN.png" type="Texture" id=1]
[ext_resource path="res://Der dinjo.png" type="Texture" id=2]
[ext_resource path="res://Dinjo.gd" type="Script" id=3]
[ext_resource path="res://IPCHICKEN.gd" type="Script" id=4]
[ext_resource path="res://ski.png" type="Texture" id=5]
[ext_resource path="res://Camera2D.gd" type="Script" id=6]
[ext_resource path="res://tileset2.tres" type="TileSet" id=7]
[ext_resource path="res://WULKANOO.png" type="Texture" id=8]
[ext_resource path="res://map.gd" type="Script" id=9]
[ext_resource path="res://SAVANNA STAMPEDE.mp3" type="AudioStream" id=10]
[ext_resource path="res://WULKANOO.gd" type="Script" id=11]
[ext_resource path="res://fade.png" type="Texture" id=12]
[ext_resource path="res://fade.gd" type="Script" id=13]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.8618
height = 0.0

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.29

[sub_resource type="CircleShape2D" id=4]
radius = 6.95636

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.38

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.0
rough = true

[sub_resource type="CapsuleShape2D" id=7]
radius = 58.0757
height = 43.5664

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( -171.051, -0.603271 )
b = Vector2( 170.098, -0.000488281 )

[node name="Node2D" type="Node2D"]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="dintscho" type="RigidBody2D" parent="."]
mode = 2
mass = 1.96429
physics_material_override = SubResource( 1 )
gravity_scale = 8.92
contacts_reported = 100
contact_monitor = true
script = ExtResource( 3 )

[node name="Der dinjo" type="Sprite" parent="dintscho"]
position = Vector2( -3.3712, -8.98984 )
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 66 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="dintscho"]
shape = SubResource( 2 )

[node name="chiggn" type="RigidBody2D" parent="."]
position = Vector2( -70.6353, 10.9317 )
mode = 2
mass = 1.02041
physics_material_override = SubResource( 3 )
gravity_scale = 3.0
contacts_reported = 100
contact_monitor = true
script = ExtResource( 4 )

[node name="IPCHICKEN" type="Sprite" parent="chiggn"]
position = Vector2( 81.7772, 3.15338 )
scale = Vector2( 0.367823, 0.359456 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="chiggn"]
scale = Vector2( 3.6369, 3.5656 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="chiggn"]
wait_time = 2.526
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_bottom = 6550
smoothing_enabled = true
script = ExtResource( 6 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
physics_material_override = SubResource( 5 )

[node name="TileMap" type="TileMap" parent="StaticBody2D2"]
z_index = -5
tile_set = ExtResource( 7 )
cell_size = Vector2( 32, 32 )
show_collision = true
collision_use_parent = true
collision_use_kinematic = true
format = 1
tile_data = PoolIntArray( 589844, 2, 0, 589845, 2, 0 )
script = ExtResource( 9 )

[node name="bgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[node name="bg" type="Sprite" parent="."]
position = Vector2( 939.262, 1797.1 )
z_index = -100
texture = ExtResource( 5 )

[node name="WULKANOO" type="Sprite" parent="."]
position = Vector2( 1667.8, 4898.36 )
scale = Vector2( 6.11407, 5.42113 )
z_index = -100
texture = ExtResource( 8 )
script = ExtResource( 11 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 1667.8, 4898.36 )
scale = Vector2( 6.11407, 5.42113 )
physics_material_override = SubResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -474.791, 312.879, 311.908, 312.643, 277.799, 297.157, 207.381, 253.725, 172.172, 228.906, 158.969, 210.293, 150.167, 194.161, 134.763, 166.861, 119.359, 138.319, 102.855, 99.851, 78.6489, 19.1913, 70.9469, -15.5543, 70.9469, -128.478, 79.7491, -147.091, 51.1419, -169.428, 42.3397, -166.946, 32.4373, -171.91, 17.0334, -170.669, 12.9093, -175.665, 7.96924, -172.531, -24.1413, -173.924, -37.4177, -179.147, -38.344, -181.933, -59.3393, -180.888, -64.2794, -176.013, -105.653, -172.531, -105.653, -180.54, -122.325, -174.272, -138.381, -173.924, -153.51, -163.477, -162.155, -158.602, -171.109, -158.602, -177.592, -145.718, -176.975, -136.316, -172.652, -127.959, -183.74, -86.7244, -201.319, -36.6373, -231.852, 23.8848, -258.683, 72.9284, -279.038, 103.189, -340.102, 188.755, -399.316, 237.799, -439.101, 272.234, -465.932, 293.103, -475.184, 298.321 )

[node name="laOOOOVA INSTANCEs" type="Node2D" parent="."]

[node name="fade" type="Sprite" parent="."]
visible = false
position = Vector2( 1321.87, 6416.66 )
rotation = 3.14159
scale = Vector2( 8.18369, 2.40101 )
texture = ExtResource( 12 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 14

[node name="fade" type="Sprite" parent="CanvasLayer"]
position = Vector2( 1541.96, 6471.86 )
rotation = 3.14159
scale = Vector2( 50, 0.531965 )
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="Vog채l" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vog채l"]
position = Vector2( 3456.47, 2014.38 )
shape = SubResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Vog채l"]
position = Vector2( 3262.82, 1896.09 )
rotation = 0.645772
shape = SubResource( 8 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Vog채l"]
position = Vector2( 3718.65, 1911.85 )
rotation = 2.70526
scale = Vector2( 1.367, 1 )
shape = SubResource( 8 )

[connection signal="body_entered" from="dintscho" to="dintscho" method="_on_dintscho_body_entered"]
[connection signal="body_exited" from="dintscho" to="dintscho" method="_on_dintscho_body_exited"]
[connection signal="body_entered" from="chiggn" to="chiggn" method="_on_chiggn_body_entered"]
[connection signal="body_exited" from="chiggn" to="chiggn" method="_on_chiggn_body_exited"]
